[project]
name = "inventory-v3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.137.1",
    "pydantic>=2.13.4",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
    "sentry-sdk>=2.63.0",
    "uuid>=1.30",
    "uvicorn>=0.49.0",
]
